<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/faq_5"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_5_1"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_5_2"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_5_3"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp"
        android:textAlignment="textStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_5_4"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq_5_5"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:textAlignment="viewStart" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimary" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>