<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/faq_2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_2_1"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:lineSpacingExtra="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/faq_4_3"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq_2_2"
        android:layout_marginTop="6dp"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="6dp"
        android:background="@color/colorPrimary" />

</LinearLayout>