<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/faq_1_q"/>

    <View
        android:id="@+id/lineHelp0"
        android:layout_width="match_parent"
        android:layout_height="0.75dp"
        android:layout_marginTop="2dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/layout_faq_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_1_1"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:src="@mipmap/sgpa"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/layout_faq_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_1_2"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="140dp"
        android:src="@mipmap/cgpa"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/layout_faq_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/faq_1_3"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:lineSpacingExtra="2dp" />

        <View
            android:id="@+id/lineHelp1"
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>
    </ScrollView>

</LinearLayout>